Add introductory sections on exceptions, collections, strings, concurrency, OOP, debugging, SOLID principles, and JVM concepts